    - Fix NULL pointer dereference after memory allocation failure.
    - Add GCC attributes to declarations in remctl.h.
  * Add python3-pyremctl package with the Python 3 version of the
    libremctl bindings.  Don't bother to rename python-remctl to
    python-pyremctl since it will be removed in an upcoming release.  Mark
    python3-pyremctl Multi-Arch: same.

 -- Russ Allbery <rra@debian.org>  Sat, 26 Oct 2019 12:14:48 -0700

remctl (3.15-1) unstable; urgency=medium

  * New upstream release.
    - Fix possible output truncation for commands receiving data from
      standard input that exit before reading all input data.
    - Do more paranoid validation of more protocol elements.
    - Make a test robust against the first resolved value of 127.0.0.1 not
      being localhost.  (Closes: #835677)
  * Add Multi-Arch: same for libnet-remctl-perl and ruby-remctl.
  * Enable basic pkg-perl-autopkgtests tests with a custom control file,
    since autodep8 doesn't find the Perl package built from this
    more-complex source package.  Don't include the smoke test for now
    since it requires a more complex setup and execution of the test from
    the perl subdirectory.
  * Add the Python import test generated by autodep8 to the package.
    (Unfortunately, autopkgtest-pkg-python in the Testsuite control field
    appears to do nothing if debian/tests/control exists in the package.)
  * Add dh-python to Build-Depends as requested by dh_python2.
  * Add debian/upstream/metadata file.
  * Set Rules-Requires-Root: no.
  * Bump watch file version to 4.
  * Update standards version to 4.1.4 (no changes required).

 -- Russ Allbery <rra@debian.org>  Sat, 05 May 2018 15:30:47 -0700

remctl (3.14-1) unstable; urgency=high

  * New upstream release.
    - SECURITY: Fix use-after-free and double-free when handling the sudo
      option in remctld.  This may allow (with some difficulty) arbitrary
      command execution on the server by streaming clients if the sudo